--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A data crowdsourcing application designed to aggregate data on how ducks are fed around the world.",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -27,5 +27,14 @@
     "jest": "^26.1.0",
     "nodemon": "^2.0.4",
     "supertest": "^4.0.2"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "testPathIgnorePatterns": [
+      "/client/"
+    ]
   }
 }
