--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A data crowdsourcing application designed to aggregate data on how ducks are fed around the world.",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "server": "nodemon server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run index\" \"npm run client\" "
   },
   "repository": {
     "type": "git",
@@ -17,6 +20,7 @@
   },
   "homepage": "https://github.com/arranw/duck_tracks#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "config": "^3.3.1",
     "express": "^4.17.1",
     "mysql2": "^2.1.0",
