--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
   },
   "homepage": "https://github.com/arranw/duck_tracks#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "config": "^3.3.1",
     "express": "^4.17.1",
     "mysql2": "^2.1.0",
-    "sequelize": "^6.3.3"
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "sequelize": "^6.3.3",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
